# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20231103053148_create_subscriptions_table.sql  20231114081630_make_satus_not_null_in_subscriptions.sql
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
