[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.8"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
once_cell = "1.18.0"
reqwest = "0.11.22"
